Add % increase and win indicator

--- a/.env.template
+++ b/.env.template
@@ -9,3 +9,6 @@ NEXT_PUBLIC_COLLECTION_CONTRACT_ADDRESS=
 
 # Stargaze APIs
 NEXT_PUBLIC_GRAPHQL_API=
+
+# cw-wager-agent API
+NEXT_PUBLIC_AGENT_API=
