--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.2",
     "react-hot-toast": "^2.3.0",
-    "react-intersection-observer": "^9.4.1"
+    "react-intersection-observer": "^9.4.1",
+    "use-sound": "^4.0.1"
   },
   "devDependencies": {
     "@cosmjs/amino": "^0.28.13",
