--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "dirty-json": "^0.9.2",
     "framer-motion": "^9.0.7",
     "graphql": "^16.6.0",
+    "howler": "^2.2.3",
     "lodash": "^4.17.21",
     "next": "13.1.6",
     "react": "18.2.0",
@@ -58,6 +59,7 @@
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/line-clamp": "^0.4.0",
     "@tailwindcss/typography": "^0.5.4",
+    "@types/howler": "^2.2.7",
     "@types/node": "^18.7.13",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
